log/build_2021-12-11_21-10-56/py_chester_pkg/stderr.log
  File "/home/ubuntu/ros2_ws/install/py_chester_pkg/lib/python3.8/site-packages/py_chester_pkg/RoboticArmDriver.py", line 21
    def main(args = None)
                        ^
SyntaxError: invalid syntax

